--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@iconify/json": "^2.2.188",
     "@vitejs/plugin-vue": "^5.0.3",
     "daisyui": "^4.7.2",
+    "prettier": "3.2.5",
     "tailwindcss": "^3.4.1",
     "vite": "^5.0.11"
   }
