--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
-    "vue": "^3.4.15"
+    "vue": "^3.4.15",
+    "vue-material-design-icons": "^5.3.0"
   },
   "devDependencies": {
     "@iconify/json": "^2.2.188",
+    "@iconify/vue": "^4.1.1",
     "@vitejs/plugin-vue": "^5.0.3",
+    "autoprefixer": "^10.4.18",
     "daisyui": "^4.7.2",
+    "postcss": "^8.4.35",
     "prettier": "3.2.5",
     "tailwindcss": "^3.4.1",
     "vite": "^5.0.11"
