--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "axios": "^1.6.7",
     "vue": "^3.4.15",
-    "vue-material-design-icons": "^5.3.0"
+    "vue-material-design-icons": "^5.3.0",
+    "vue-router": "^4.3.0"
   },
   "devDependencies": {
     "@iconify/json": "^2.2.188",
@@ -20,7 +21,8 @@
     "autoprefixer": "^10.4.18",
     "daisyui": "^4.7.2",
     "postcss": "^8.4.35",
-    "prettier": "3.2.5",
+    "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.11",
     "tailwindcss": "^3.4.1",
     "vite": "^5.0.11"
   }
